--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             </ul>
         </div>
         <div class="col-md-8" style="height:500px;background-color: #cccccc">
+            <div id="chartZoom">
+                <a href="#" id="zoomIn">Zoom In</a> <a href="#" id="zoomOut">Zoom Out</a>
+            </div>
             <div id="chart1" class='with-transitions'>
                 <svg></svg>
             </div>
@@ -32,85 +35,87 @@
 </div>
 </body>
 <script>
+    var chart;
+    var width = 600;
+    var height = 300;
+    var fitScreen = false;
+
+    var zoom = 1;
+    function setChartViewBox() {
+        var w = width * zoom,
+                h = height * zoom;
+
+        chart
+                .width(w)
+                .height(h);
+
+        d3.select('#chart1 svg')
+                .attr('viewBox', '0 0 ' + w + ' ' + h)
+                .transition().duration(500)
+                .call(chart);
+    }
+
+    function zoomOut() {
+        zoom += .25;
+        setChartViewBox();
+    }
+
+    function zoomIn() {
+        if (zoom <= .5) return;
+        zoom -= .25;
+        setChartViewBox();
+    }
+
+    function resizeChart() {
+        var container = d3.select('#chart1');
+        var svg = container.select('svg');
+
+        if (fitScreen) {
+            // resize based on container's width AND HEIGHT
+            var windowSize = nv.utils.windowSize();
+            svg.attr("width", windowSize.width);
+            svg.attr("height", windowSize.height);
+        } else {
+            // resize based on container's width
+            var aspect = chart.width() / chart.height();
+            var targetWidth = parseInt(container.style('width'));
+            svg.attr("width", targetWidth);
+            svg.attr("height", Math.round(targetWidth / aspect));
+        }
+    }
     nv.addGraph(function () {
-        var chart = nv.models.lineChart();
-        var fitScreen = false;
-        var width = 600;
-        var height = 300;
-        var zoom = 1;
+        chart = nv.models.lineChart();
+
+
 
         chart.useInteractiveGuideline(true);
         chart.xAxis
                 .tickFormat(d3.format(',r'));
 
+        /*对线进行点击操作*/
         chart.lines.dispatch.on("elementClick", function (evt) {
             console.log(evt);
         });
 
+        /*
+         格式化提示框数据格式
+         */
         chart.yAxis
                 .axisLabel('Voltage (v)')
                 .tickFormat(d3.format(',.2f'));
 
-        d3.select('#chart1 svg')
-                .attr('perserveAspectRatio', 'xMinYMid')
-                .attr('width', width)
-                .attr('height', height)
-                .datum(sinAndCos());
 
-        setChartViewBox();
-        resizeChart();
-
-        nv.utils.windowResize(resizeChart);
 
         d3.select('#zoomIn').on('click', zoomIn);
         d3.select('#zoomOut').on('click', zoomOut);
 
 
-        function setChartViewBox() {
-            var w = width * zoom,
-                    h = height * zoom;
 
-            chart
-                    .width(w)
-                    .height(h);
-
-            d3.select('#chart1 svg')
-                    .attr('viewBox', '0 0 ' + w + ' ' + h)
-                    .transition().duration(500)
-                    .call(chart);
-        }
-
-        function zoomOut() {
-            zoom += .25;
-            setChartViewBox();
-        }
-
-        function zoomIn() {
-            if (zoom <= .5) return;
-            zoom -= .25;
-            setChartViewBox();
-        }
 
         // This resize simply sets the SVG's dimensions, without a need to recall the chart code
         // Resizing because of the viewbox and perserveAspectRatio settings
         // This scales the interior of the chart unlike the above
-        function resizeChart() {
-            var container = d3.select('#chart1');
-            var svg = container.select('svg');
 
-            if (fitScreen) {
-                // resize based on container's width AND HEIGHT
-                var windowSize = nv.utils.windowSize();
-                svg.attr("width", windowSize.width);
-                svg.attr("height", windowSize.height);
-            } else {
-                // resize based on container's width
-                var aspect = chart.width() / chart.height();
-                var targetWidth = parseInt(container.style('width'));
-                svg.attr("width", targetWidth);
-                svg.attr("height", Math.round(targetWidth / aspect));
-            }
-        }
 
         return chart;
     });
@@ -120,8 +125,8 @@
                 cos = [];
 
         for (var i = 0; i < 100; i++) {
-            sin.push({x: i, y: Math.sin(i / 10)});
-            cos.push({x: i, y: .5 * Math.cos(i / 10)});
+            sin.push({x: i, y: Math.round(Math.random() * 100)});
+            cos.push({x: i, y: Math.round(Math.random() * 100)});
         }
 
         return [
@@ -136,7 +141,21 @@
                 color: "#2ca02c"
             }
         ];
-    }
+    };
+
+    setInterval(function(){
+        d3.select('#chart1 svg')
+                .attr('perserveAspectRatio', 'xMinYMid')
+                .attr('width', width)
+                .attr('height', height)
+                .datum(sinAndCos());
+
+        setChartViewBox();
+        resizeChart();
+
+        nv.utils.windowResize(resizeChart);
+
+    },1000);
 
 
 </script>
